--- a/public/brave/css/styles/style.css
+++ b/public/brave/css/styles/style.css
@@ -2480,7 +2480,7 @@ body.boxed.img-5 {
 	padding: 15px 0px;
 }
 .header-2 .logo {
-	margin: 10px 0px 25px 0px;
+	/*margin: 10px 0px 25px 0px;*/
 }
 .header-2 .logo h1 {
 	font-weight: 600;
@@ -2515,13 +2515,14 @@ body.boxed.img-5 {
 .header-2 .navy {
 	width: auto;
 	background: #fff;
+	padding-top: 19px;
 }
 .header-2 .navy > ul > li {
 	float: left;
 }
 .header-2 .navy > ul > li > a {
 	padding: 20px 15px;
-	font-size: 13px;
+	font-size: 15px;
 	line-height:28px;
 	color: #666;
 	font-weight: 600;
@@ -2690,7 +2691,7 @@ body.boxed.img-5 {
 /* Header 2 search */
 .header-2 .head-search {
 	position: relative;
-	top:20px;
+	top:35px;
 }
 .header-2 .head-search .b-dropdown-block {
 	padding: 7px;
