--- a/public/brave/css/styles/skin-black.css
+++ b/public/brave/css/styles/skin-black.css
@@ -24,7 +24,7 @@ a:hover {
 /* Default Theme Color Class */
 /*****************************/
 .color {
-  color: #666666 !important;
+  color: #f9990f !important;
 }
 a.color {
   color: #666666 !important;
