--- a/public/brave/css/styles/style.css
+++ b/public/brave/css/styles/style.css
@@ -2135,14 +2135,14 @@ body.boxed.img-5 {
 /* Top bar */
 .top-bar {
 	background: #fdfdfd;
-	color: #999;
+	color: #3d2f65;
 	padding: 6px 0px;
 	font-size: 13px;
 	line-height: 25px;
 	border-bottom: 1px solid #f5f5f5;
 }
 .top-bar a {
-	color: #999;
+	color: #3d2f65;
 }
 @media (max-width: 785px) {
 	.top-bar .tb-contact {
@@ -2238,7 +2238,7 @@ body.boxed.img-5 {
 	margin-left: 10px;
 }
 .top-bar .tb-language a {
-	color: #888;
+	color: #3d2f65;
 }
 .top-bar .tb-language a:hover {
 	color: #666;
@@ -2524,8 +2524,8 @@ body.boxed.img-5 {
 	padding: 20px 15px;
 	font-size: 15px;
 	line-height:28px;
-	color: #666;
-	font-weight: 600;
+	color: #3d2f65;
+	font-weight: 800;
 }
 .header-2 .navy > ul > li:hover > a,
 .header-2 .navy > ul > li > a:hover {
