index page still

--- a/public/brave/css/styles/style.css
+++ b/public/brave/css/styles/style.css
@@ -6406,7 +6406,7 @@ body.boxed.img-5 {
 }
 /* Quote two */
 .quote-two{
-	background:url("../../img/raster.png"),url("../../img/backgrounds/3.jpg") center center;
+	background:url("../../img/raster.png"),url("../../img/backgrounds/ebele_31.jpg") center center;
 	background-attachment:fixed;
 }
 .quote-two .quote-two-content{
